# MetaMaker

./: .gitignore  README.md
MetaMaker/: MetaMaker.jucer
MetaMaker/Builds/CLion/: CMakeLists.txt  Release-Info-App.plist
MetaMaker/Builds/MacOSX/: Info-App.plist
MetaMaker/Builds/MacOSX/MetaMaker.xcodeproj/: project.pbxproj
MetaMaker/Builds/MacOSX/MetaMaker.xcodeproj/xcshareddata/xcschemes/: MetaMaker - App.xcscheme
MetaMaker/Builds/VisualStudio2019/: MetaMaker.sln  MetaMaker_App.vcxproj  MetaMaker_App.vcxproj.filters  resources.rc
MetaMaker/JuceLibraryCode/: AppConfig.h  JuceHeader.h
MetaMaker/Source/: AudioFileExporter.cpp  AudioFileExporter.h  ButtonPanel.cpp  ButtonPanel.h  Defines.h  EditingPanel.cpp  EditingPanel.h  FileBrowserPanel.cpp  FileBrowserPanel.h  FileInfoPanel.cpp  FileInfoPanel.h  FileInfoWindow.cpp  FileInfoWindow.h  FileVisualiser.h  GUIDefines.h  KeywordButton.cpp  KeywordButton.h  Main.cpp  MainComponent.cpp  MainComponent.h  MetadataManager.cpp  MetadataManager.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindowPanel.cpp  SettingsWindowPanel.h  WaveformPanel.cpp  WaveformPanel.h  WaveformRangeSelector.cpp  WaveformRangeSelector.h
